crates/hpc-core/tests/compile_fail/api_wouble_wait.stderr
error[E0599]: no method named `unwrap` found for struct `DeviceBuffer` in the current scope
  --> tests/compile_fail/api_wouble_wait.rs:16:36
   |
16 |     let ready = evt.wait(inflight).unwrap();
   |                                    ^^^^^^ method not found in `DeviceBuffer<'_, u8, hpc_core::Ready>`

error[E0599]: no method named `unwrap` found for struct `DeviceBuffer` in the current scope
  --> tests/compile_fail/api_wouble_wait.rs:19:36
   |
19 |     let _illegal = evt.wait(ready).unwrap();
   |                                    ^^^^^^ method not found in `DeviceBuffer<'_, _, hpc_core::Ready>`
